# SokolovD_29July2024

./: .gitignore  README.md  driver.py  pyproject.toml
config/: __init__.py  config.yaml
helpers/: utils.py
helpers/api_client/: cart.py
helpers/client/: chitay_gorod_client.py  http_client.py
pages/: base_page.py  cart_page.py
test/test_api/: test_cart.py
test/test_ui/: conftest.py  test_cart_ui.py
test_logic_api/: add_delete_item_cart.py  delete_all_items_cart.py
